--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -2,6 +2,10 @@ $bg: #FCFBFF;
 $purple: #5E6BF6;
 $shadow: 0px 4px 13px rgba(30,24,104,0.14);
 
+body{
+    background: $bg;
+}
+
 .daanbot{
     width: 100vw;
     height: 100vh;
@@ -11,9 +15,14 @@ $shadow: 0px 4px 13px rgba(30,24,104,0.14);
     align-items: center;
     justify-content: center;
 
+    @media (max-width:500px){
+        align-items: unset;
+        justify-content: unset;
+    }
+
     &__container{
         display: flex;
-        max-height: 100%;
+        height: 100%;
         flex-direction: column;
         width: 800px;
         max-width: 100vw;
@@ -22,9 +31,17 @@ $shadow: 0px 4px 13px rgba(30,24,104,0.14);
     }
 
     &__chats{
-        height: 100%;
         flex: 1;
+        padding-top: 20px;
+        padding-bottom: 30px;
+        display: flex;
         padding-left: 100px;
+        flex-direction: column;
+        justify-content: end;
+
+        @media (max-width:500px){
+            padding-left: 50px;
+        }
     }
 
     &__chat {
@@ -41,6 +58,14 @@ $shadow: 0px 4px 13px rgba(30,24,104,0.14);
             svg{
                 width: 70px;
                 height: 70px;
+            }
+
+            @media (max-width:500px){
+                transform: translateX(calc(-100% - 10px));
+                svg{
+                    width: 40px;
+                    height: 40px;
+                }
             }
         }
 
@@ -74,14 +99,29 @@ $shadow: 0px 4px 13px rgba(30,24,104,0.14);
                     animation-delay:0.2s;
                 }
             }
+        }
 
-            &.daanbot__cloud--loading{
-                padding: 20px 15px;
-                .daanbot__cloud__container{
-                    display: none;
-                }
-                .daanbot__cloud__ball{
-                    display: block;
+        &:not(.daanbot__chat--user) .daanbot__cloud--loading{
+            padding: 20px 15px;
+            .daanbot__cloud__container{
+                display: none;
+            }
+            .daanbot__cloud__ball{
+                display: block;
+            }
+        }
+
+        &--user{
+            .daanbot__avatar{
+                display:none;
+            }
+            .daanbot__cloud{
+                color: white;
+                margin-left: auto;
+                border-radius: 30px 30px 0px 30px;
+                background: $purple;
+                p, div, a{
+                    color: white;
                 }
             }
         }
@@ -96,19 +136,62 @@ $shadow: 0px 4px 13px rgba(30,24,104,0.14);
         border-radius: 8px;
     }
 
-    &__bottom{
-        flex:none;
+    &__options {
+        flex:1;
+        align-items: flex-start;
+        position: sticky;
+        bottom: 100px;
         display: flex;
-        padding-top: 30px;
     }
 
-    &__option{
+    &__option {
         background: $purple;
         color: white;
         box-shadow: $shadow;
-        cursor:pointer;
-        &:hover{
-            opacity:0.8;
+        cursor: pointer;
+        margin-bottom: 10px;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    &__bottom {
+        background: $bg;
+        position: sticky;
+        bottom: 0;
+        padding-top: 30px;
+        flex: none;
+
+        &__textarea {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 10px;
+            textarea{
+                width: 100%;
+                font-size: 16px;
+                padding: 10px 30px;
+                background: white;
+                resize: none;
+
+                box-shadow: $shadow;
+                margin-right: 10px;
+                border-radius: 8px;
+                border: 1px solid white;
+                &:focus{
+                    border: 1px solid black;
+                }
+            }
+            button{
+                flex: none;
+                height: fit-content;
+                padding: 2px 5px;
+                border-radius: 100%;
+                background: $purple;
+                svg{
+                    width: 30px;
+                }
+            }
         }
     }
 }
