--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -150,9 +150,43 @@ body{
         box-shadow: $shadow;
         cursor: pointer;
         margin-bottom: 10px;
+        opacity:0;
+        animation: fadeIn 500ms;
+        animation-fill-mode: forwards;
+
+        &:nth-child(2){
+            animation-delay: 100ms;
+        }
+        &:nth-child(3){
+            animation-delay: 200ms;
+        }
+        &:nth-child(4){
+            animation-delay: 300ms;
+        }
+        &:nth-child(5){
+            animation-delay: 400ms;
+        }
+        &:nth-child(6){
+            animation-delay: 500ms;
+        }
+        &:nth-child(7){
+            animation-delay: 600ms;
+        }
+        &:nth-child(8){
+            animation-delay: 700ms;
+        }
 
         &:hover {
             opacity: 0.8;
+        }
+    }
+
+    @keyframes fadeIn {
+        from{
+            opacity: 0;
+        }
+        to{
+            opacity: 1;
         }
     }
 
