--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -132,11 +132,11 @@ body{
     }
 
     &__box{
-        padding: 10px 30px;
+        padding: 10px 22px;
         background: white;
         box-shadow: $shadow;
         margin-bottom: 30px;
-        margin-right: 30px;
+        margin-right: 15px;
         border-radius: 8px;
     }
 
@@ -145,13 +145,17 @@ body{
         align-items: flex-start;
         position: sticky;
         bottom: 100px;
-        display: flex;
     }
 
     &__option {
+        display: inline-block;
         background: $purple;
         color: white;
+        width: max-content;
+        max-width: 214px;
+        text-align: center;
         box-shadow: $shadow;
+        vertical-align: top;
         cursor: pointer;
         margin-bottom: 10px;
         opacity:0;
