--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -152,7 +152,7 @@ body{
         background: $purple;
         color: white;
         width: max-content;
-        max-width: 214px;
+        max-width: 300px;
         text-align: center;
         box-shadow: $shadow;
         vertical-align: top;
@@ -161,6 +161,13 @@ body{
         opacity:0;
         animation: fadeIn 500ms;
         animation-fill-mode: forwards;
+
+        @media (max-width: 400px){
+            display: block;
+            max-width: 100vw;
+            margin: auto;
+            text-align: center;
+        }
 
         &:nth-child(2){
             animation-delay: 100ms;
