--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -165,7 +165,8 @@ body{
         @media (max-width: 400px){
             display: block;
             max-width: 100vw;
-            margin: auto;
+            margin-left: auto;
+            margin-right: auto;
             text-align: center;
         }
 
