--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -78,6 +78,12 @@ body{
             box-shadow: $shadow;
             border-radius: 30px 30px 30px 0px;
 
+
+
+            a{
+                color: $purple;
+            }
+
             &__container{
 
             }
