--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -73,12 +73,36 @@ body{
             display: flex;
             margin-bottom: 20px;
             width: fit-content;
-            padding: 15px 30px;
+            overflow: hidden;
             background: white;
             box-shadow: $shadow;
             border-radius: 30px 30px 30px 0px;
+            padding: 15px 30px;
 
+            &--image{
+                padding:0;
+            }
+            &--video{
+                &:not(.daanbot__cloud--loading) {
+                    padding: 0;
+                    width: 100%;
 
+                    .daanbot__cloud__container {
+                        width: 100%;
+                        padding: 0;
+                        position: relative;
+                        padding-top: 56.2%;
+
+                        iframe {
+                            position: absolute;
+                            width: 100%;
+                            height: 100%;
+                            top: 0;
+                            left: 0;
+                        }
+                    }
+                }
+            }
 
             a{
                 color: $purple;
@@ -218,7 +242,8 @@ body{
         background: $bg;
         position: sticky;
         bottom: 0;
-        padding-top: 30px;
+        padding-top: 8px;
+        margin-top: 20px;
         flex: none;
 
         &__textarea {
