--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -2,6 +2,8 @@ $bg: #FCFBFF;
 $purple: #5E6BF6;
 $shadow: 0px 4px 13px rgba(30,24,104,0.14);
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 body{
     background: $bg;
 }
@@ -18,6 +20,123 @@ body{
     @media (max-width:500px){
         align-items: unset;
         justify-content: unset;
+    }
+
+    &__welcome{
+        display: flex;
+        align-items:center;
+        margin-left: -100px;
+        margin-bottom: 50px;
+
+        &__avatar{
+            border-radius:50%;
+            border:5px solid white;
+            overflow:hidden;
+            flex:none;
+            box-shadow: $shadow;
+            transition: all 500ms ease;
+
+            img{
+                width:200px;
+                transition: all 500ms ease;
+            }
+        }
+        &__right{
+            display:flex;
+            flex-direction: column;
+            padding-left:30px;
+            flex:1;
+            justify-content: center;
+
+            h1{
+                transition: all 500ms ease;
+                font-family: 'Montserrat', sans-serif;
+                font-size:60px;
+                line-height: 1em;
+                font-weight: bolder;
+                margin:0;
+                margin-left: -2px;
+                color: #3b4293;
+            }
+            h2{
+                transition: all 500ms ease;
+                font-family: 'Montserrat', sans-serif;
+                font-size:36px;
+                line-height: 1.2em;
+                font-weight: bolder;
+                margin:0;
+                color: $purple;
+            }
+            button{
+                font-size: 20px;
+                font-weight: bold;
+                padding: 10px 20px;
+                border-radius: 7px;
+                margin-top: 10px;
+                margin-bottom: -10px;
+                margin-left:0;
+            }
+        }
+        @media (max-width:720px){
+            &__avatar img{
+                width:120px;
+            }
+            &__right {
+                h1 {
+                    font-size: 40px;
+                }
+                h2 {
+                    font-size: 24px;
+                }
+            }
+        }
+        @media (max-width:499px){
+            display: block;
+            margin-left:-50px;
+
+            &__avatar {
+                margin:0 auto;
+                margin-bottom: 20px;
+                width: max-content;
+            }
+            &__right {
+                text-align:center;
+                padding:0;
+                h1 {
+                    font-size: 30px;
+                }
+                h2 {
+                    font-size: 18px;
+                }
+                button{
+                    margin: 20px auto;
+                }
+            }
+        }
+    }
+    @media (min-width:500px) {
+        &:not(.daanbot--welcome) {
+            .daanbot__welcome {
+                &__avatar {
+                    box-shadow: none;
+                    border-width: 0;
+
+                    img {
+                        width: 70px;
+                    }
+                }
+
+                &__right {
+                    h1 {
+                        font-size: 30px;
+                    }
+
+                    h2 {
+                        font-size: 18px;
+                    }
+                }
+            }
+        }
     }
 
     &__container{
@@ -55,14 +174,14 @@ body{
             width: fit-content;
             overflow: hidden;
             border-radius: 100%;
-            svg{
+            svg, img{
                 width: 70px;
                 height: 70px;
             }
 
             @media (max-width:500px){
                 transform: translateX(calc(-100% - 10px));
-                svg{
+                svg, img{
                     width: 40px;
                     height: 40px;
                 }
