--- a/resources/css/daanbot.scss
+++ b/resources/css/daanbot.scss
@@ -307,12 +307,15 @@ body{
             &__spacer{
                 content:'';
                 flex:1;
+                &:nth-child(2){
+                    order:2;
+                }
             }
             &::after{
                 content: "";
                 position: fixed;
-                height: 60px;
-                bottom: 112px;
+                height: 120px;
+                bottom: 60px;
                 right: 0;
                 width: 15px;
                 background: linear-gradient(-90deg, #FCFBFF, transparent);
